- https://github.com/eclipse-syson/syson/issues/960[#960] [general-view] In the selection dialog of the creation tools for `Stakeholders` and `Actors`, display possible `Part Usage` candidates in a tree instead of a list.
- https://github.com/eclipse-syson/syson/issues/1012[#1012] [general-view] Allow package nodes to be smaller than their default size

=== New features

- https://github.com/eclipse-syson/syson/issues/977[#977] [validation] SysON now implements the constraints (a.k.a. validation rules) from the SysMLv2 specification.
The _Validation_ view show the results of the execution of the constraints on your models.
- https://github.com/eclipse-syson/syson/issues/987[#987] Implementation of drag and drop in Explorer view.
- https://github.com/eclipse-syson/syson/issues/1000[#1000] Add support for semantic undo redo.


== v2025.1.0

=== Shapes

- Improve support for libraries in the explorer

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/796[#796] [import] Improve the code in the import module to make it more generic:
* Delete the `AstConstants` class: Constants have been split across several classes.
* Delete the `LogBook` class (no longer used).
* Replace `AstContainmentReferencePart` with `ContainmentReferenceHandler`.
* Replace `AstObjectParser` with `EAttributeHandler`.
* Replace `AstWeakReferenceParser` with `NonContainmentReferenceHandler`.
* Delete `ReferenceHelper` (no longer used).
* Delete `SysMLUploadDocumentReportProvider` as it is not functional.
* Most components used in the transformation now require a `MessageReporter` instance to collect transformation messages.
- https://github.com/eclipse-syson/syson/issues/887[#887] [explorer] Rework the structure of standard and user libraries in the explorer:
* Rename `StandardLibraryDirectory` to `LibrariesDirectory`.
* Rename `ReferencedLibraryDirectory` to `UserLibrariesDirectory`.