@@ -127,6 +127,8 @@ image::release-notes-diagrams-export-as-png.png[Export diagram as PNG, width=50%
 * `Stakeholder Membership`
 
 - In the `General View` diagram, Package graphical nodes can now be resized smaller than their default size.
+- Display in the _Details_ view the properties _isDefault_ and _isInitial_ in Core tab of `FeatureValue` concept.
+
 
 == Dependency update
 
